--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="banner-card2">
             <h2>Uthaya Kumar</h2>
             <h3>I'm a <span class="running">Front End Developer</span></h3>
-            <p>I'm a Web Designer.Experienced with all stages of<br> the development cycle for dynamic web projects.</p>
+            <p>I'm a Front end developer.Experienced with all stages of<br> the development cycle for dynamic web projects.</p>
             <div class="banner-icon">
               <i id="ic" class="fa fa-facebook" aria-hidden="true"></i>
               <i id="ic" class="fa fa-whatsapp" aria-hidden="true"></i>
@@ -114,10 +114,10 @@
           <div class="about-card1">
             <p>
               Hi! My name is Uthaya kumar. I am Front End Developer, and I'm very passionate and dedicated to my work.
-              With Fresher as a professional graphic designer, I have acquired the skills and knowledge necessary to
+              With Fresher as a professional Front end developer, I have acquired the skills and knowledge necessary to
               make your project a success.</p>
             <p>
-              Web Developers are build a website’s core structure using coding languages, while designers are more
+              Web Developers are build a website’s core structure using coding languages, while developer are more
               visually creative and user-focused. It is a long established fact that a reader will be distracted by the
               readable content of a page when looking at its layout.
             </p>
